--- a/publico.html
+++ b/publico.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+   <!DOCTYPE html>
+<html lang="es">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Recomendados</title>
@@ -9,6 +12,15 @@
 <body>
     <header>
         <h1>Productos Afiliados</h1>
+    </header>
+
+    <section id="productos">
+        <ul id="listaProductos"></ul>
+    </section>
+
+    <script src="publico.js"></script>
+</body>
+</html>
     </header>
 
     <section id="productos">
