--- a/publico.html
+++ b/publico.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos Recomendados</title>
+    <title>Productos Exclusivos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Productos Afiliados</h1>
+        <h1>Descubre los mejores productos</h1>
+        <p>Explora nuestras recomendaciones y encuentra lo que necesitas</p>
     </header>
 
     <section id="productos">
-        <ul id="listaProductos"></ul>
+        <div id="listaProductos"></div>
     </section>
 
     <script src="publico.js"></script>
