--- a/publico.html
+++ b/publico.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Descubre los mejores productos</h1>
-        <p>Explora nuestras recomendaciones y encuentra lo que necesitas</p>
+        <h1>Descubre nuestros productos</h1>
     </header>
 
     <section id="productos">
