--- a/index.html
+++ b/index.html
@@ -3,29 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador de Productos</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Productos Exclusivos</title>
+    <link rel="stylesheet" href="publico.css">
 </head>
 <body>
     <header>
-        <h1>Gestión de Productos</h1>
+        <h1>Descubre nuestros productos</h1>
     </header>
 
-    <section>
-        <form id="productoForm">
-            <input type="text" id="nombre" placeholder="Nombre del producto" required>
-            <input type="url" id="imagen" placeholder="URL de la imagen" required>
-            <input type="url" id="codigo" placeholder="URL del producto afiliado" required>
-            <input type="text" id="categoria" placeholder="Categoría" required>
-            <button type="submit">Agregar Producto</button>
-        </form>
-    </section>
-
     <section id="productos">
-        <h2>Lista de Productos</h2>
-        <ul id="listaProductos"></ul>
+        <div id="listaProductos"></div>
     </section>
 
-    <script src="admin.js"></script>
+    <script src="publico.js"></script>
 </body>
 </html>
