--- a/publico.html
+++ b/publico.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Exclusivos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="publico.css">
 </head>
 <body>
     <header>
-        <h1>Descubre nuestros productos</h1>
+        <h1>Descubre Nuestros Productos</h1>
     </header>
 
     <section id="productos">
